--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.datasource.password=postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
+
+expiration-time=604800
