Add login functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,10 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:4200}
+
+spring.jackson.time-zone=America/Sao_Paulo
+
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
