Add admin main user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
 expiration-time=604800
+
+admin-email=admin@email.com
+admin-password=123456
