--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:4200}
 
 spring.jackson.time-zone=America/Sao_Paulo
 
+spring.jackson.default-property-inclusion=NON_NULL
+
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
